--- a/HW2_notebook.ipynb
+++ b/HW2_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n    def evaluate(self, x = None): #shall return the constant value of its children. If impossible you should evaluate children first. \\n        if self.value is not None:\\n            return self.value\\n        if self.function_name == '+':\\n            return self.children[0].evaluate(variables) + self.children[1].evaluate(variables)\\n        elif self.function_name == '*':\\n            return self.children[0].evaluate(variables) * self.children[1].evaluate(variables)\\n        elif self.function_name == '/':\\n            return self.children[0].evaluate(variables) * self.children[1].evaluate(variables)\\n        elif self.function_name == 'cos':\\n            return np.cos(self.children[0].evaluate(variables))\\n        elif self.function_name == 'sin':\\n            return np.sin(self.children[0].evaluate(variables))\\n        elif self.function_name == 'var':\\n            return x\\n        elif self.function_name == 'const':\\n            return self.value\\n\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Function_node:\n",
     "    def __init__(self, function_name, children=None, value=None):\n",
@@ -54,12 +65,14 @@
     "            return x\n",
     "        elif self.function_name == 'const':\n",
     "            return self.value\n",
+    "            \n",
+    "testing commit changes, ignore. \n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,29 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ww = Function_node('mult')\n",
     "children = [2,3]\n",
-    "ww.children = children\n",
-    "\n",
-    "rslt = ww.evaluate()\n",
-    "print(rslt)\n"
+    "ww.children = children\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +169,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\eduar\\OneDrive\\Documents\\FALL 2023\\MECS4510 EVOLUTIONARY COMPUTATION&DESIGN AUTOMATI\\4510_HW2\\HW2_notebook.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m hh \u001b[39m=\u001b[39m NP_Heap(length \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m hh\u001b[39m.\u001b[39mheap[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m hh\u001b[39m.\u001b[39minsert(parent_indx \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m,value \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m hh\u001b[39m.\u001b[39minsert(parent_indx \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m,value \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "\u001b[1;32mc:\\Users\\eduar\\OneDrive\\Documents\\FALL 2023\\MECS4510 EVOLUTIONARY COMPUTATION&DESIGN AUTOMATI\\4510_HW2\\HW2_notebook.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m hh \u001b[39m=\u001b[39m NP_Heap(length \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m hh\u001b[39m.\u001b[39mheap[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m hh\u001b[39m.\u001b[39minsert(parent_indx \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m,value \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m hh\u001b[39m.\u001b[39minsert(parent_indx \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m,value \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m))\n",
       "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'Function_node'"
      ]
     }
