inserting and eval basic

--- a/HW2_notebook.ipynb
+++ b/HW2_notebook.ipynb
@@ -9,96 +9,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import heapq as h\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\n    def evaluate(self, x = None): #shall return the constant value of its children. If impossible you should evaluate children first. \\n        if self.value is not None:\\n            return self.value\\n        if self.function_name == '+':\\n            return self.children[0].evaluate(variables) + self.children[1].evaluate(variables)\\n        elif self.function_name == '*':\\n            return self.children[0].evaluate(variables) * self.children[1].evaluate(variables)\\n        elif self.function_name == '/':\\n            return self.children[0].evaluate(variables) * self.children[1].evaluate(variables)\\n        elif self.function_name == 'cos':\\n            return np.cos(self.children[0].evaluate(variables))\\n        elif self.function_name == 'sin':\\n            return np.sin(self.children[0].evaluate(variables))\\n        elif self.function_name == 'var':\\n            return x\\n        elif self.function_name == 'const':\\n            return self.value\\n\""
+       "\"\\n    def evaluate(self, x = None): #shall return the constant value of its children. If impossible you should evaluate children first. \\n        if self.value is not None:\\n            return self.value\\n        if self.function_name == '+':\\n            return self.children[0].evaluate(variables) + self.children[1].evaluate(variables)\\n        elif self.function_name == '*':\\n            return self.children[0].evaluate(variables) * self.children[1].evaluate(variables)\\n        elif self.function_name == '/':\\n            return self.children[0].evaluate(variables) * self.children[1].evaluate(variables)\\n        elif self.function_name == 'cos':\\n            return np.cos(self.children[0].evaluate(variables))\\n        elif self.function_name == 'sin':\\n            return np.sin(self.children[0].evaluate(variables))\\n        elif self.function_name == 'var':\\n            return x\\n        elif self.function_name == 'const':\\n            return self.value\\ntesting commit\\n\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "class Function_node:\n",
+    "    #Globals to be inherited\n",
+    "    node_types = ('+','-','*','/','^','sin','cos','const','var','H')#last is the header indicator (indexing from 1!)\n",
+    "    \n",
     "    def __init__(self, function_name, children=None, value=None):\n",
-    "        self.function_name = function_name\n",
+    "             \n",
+    "        #assigning a name in our accepted list\n",
+    "        try:\n",
+    "            if function_name not in self.node_types:\n",
+    "                raise ValueError('\"Invalid input. Please enter a valid node type \\n\\n\\t run> heap.node_types for the list\"')\n",
+    "            else:\n",
+    "                self.function_name = function_name\n",
+    "        except ValueError as err_msg: \n",
+    "            #print(err_msg)\n",
+    "            self.function_name = 'ERROR'\n",
+    "            sys.exit() #exit if there is an issue\n",
+    "            \n",
+    "        \n",
     "        self.children = children if children else []\n",
     "        self.value = value\n",
     "        \n",
     "    def __str__(self): #print statement\n",
-    "        if  self.function_name in ['var','const']:\n",
+    "        if  self.function_name  == 'const':\n",
     "            return f\"{self.value}\"\n",
-    "        else:\n",
-    "            return f\"{self.function_name}\"\n",
-    "\n",
-    "'''\n",
-    "    def evaluate(self, x = None): #shall return the constant value of its children. If impossible you should evaluate children first. \n",
-    "        if self.value is not None:\n",
-    "            return self.value\n",
-    "        if self.function_name == '+':\n",
-    "            return self.children[0].evaluate(variables) + self.children[1].evaluate(variables)\n",
-    "        elif self.function_name == '*':\n",
-    "            return self.children[0].evaluate(variables) * self.children[1].evaluate(variables)\n",
-    "        elif self.function_name == '/':\n",
-    "            return self.children[0].evaluate(variables) * self.children[1].evaluate(variables)\n",
-    "        elif self.function_name == 'cos':\n",
-    "            return np.cos(self.children[0].evaluate(variables))\n",
-    "        elif self.function_name == 'sin':\n",
-    "            return np.sin(self.children[0].evaluate(variables))\n",
     "        elif self.function_name == 'var':\n",
-    "            return x\n",
-    "        elif self.function_name == 'const':\n",
-    "            return self.value\n",
-    "            \n",
-    "testing commit changes, ignore. \n",
-    "'''"
+    "            if self.value: return f\"x={self.value}\"\n",
+    "            else:return \"X\"\n",
+    "        \n",
+    "        else:\n",
+    "            return f\"{self.function_name}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://github.com/swacad/numpy-heap/blob/master/heap.py\n",
-    "\n",
+    "#Starting at index 1~\n",
     "class NP_Heap(Function_node): \n",
     "    def __init__(self,length = 2): \n",
-    "        self.heap   = np.full(length,np.nan)\n",
-    "        \n",
+    "        self.heap           = np.full(length,np.nan).astype(Function_node)\n",
+    "        self.operators      = ('+','-','*','/','^','sin','cos')\n",
+    "        self.trig_operators = ('sin','cos')\n",
     "\n",
     "    def get_parent_idx(self, child_idx):\n",
-    "        if child_idx % 2 == 0:\n",
-    "            parent_idx = int(child_idx / 2 - 1)\n",
-    "        else:\n",
-    "            parent_idx = int(np.floor(child_idx / 2))\n",
-    "        return parent_idx\n",
+    "        return int(child_idx/2)\n",
     "\n",
     "    def get_parent(self, child_idx):\n",
     "        parent_idx = self.get_parent_idx(child_idx)\n",
     "        return self.heap[parent_idx] \n",
     "    \n",
     "    def get_left_child_idx(self, parent_idx):\n",
-    "        return 2 * parent_idx + 1\n",
+    "        return 2 * parent_idx\n",
     "\n",
     "    def get_right_child_idx(self, parent_idx):\n",
-    "        return 2 * parent_idx + 2\n",
+    "        return 2 * parent_idx + 1\n",
     "\n",
     "    def get_left_child(self, parent_idx):\n",
     "        left_child = self.heap[self.get_left_child_idx(parent_idx)]\n",
@@ -109,101 +104,194 @@
     "        return right_child\n",
     "\n",
     "    def get_children_idx(self, parent_idx):\n",
-    "        return 2 * parent_idx + 1, 2 * parent_idx + 2\n",
+    "        return 2 * parent_idx, 2 * parent_idx + 1\n",
     "\n",
     "    def get_children(self, parent_idx):\n",
     "        child_1_idx, child_2_idx = self.get_parent_idx(parent_idx)\n",
     "        return self.heap[child_1_idx], self.heap[child_2_idx]\n",
     "    \n",
     "    def print_arr(self):\n",
-    "        print(np.stack((np.arange(self.heap.size),self.heap)))\n",
+    "        heap_str = [str(node) for node in self.heap ]\n",
+    "        print(np.stack((np.arange(self.heap.size),heap_str)))\n",
+    "        return None\n",
+    "    \n",
+    "    def show_function(self): #TODO\n",
+    "        #evaluates a node given its index\n",
+    "        heap_str = [str(node) for node in self.heap ]\n",
+    "        depth = None #some function of length (1/2)\n",
+    "        function_str = None\n",
+    "        return None\n",
+    "    \n",
+    "    # EVALUATE A NODE:\n",
+    "    def node_eval(self,node_ind,X = None): #TODO\n",
+    "        #evaluates a node given its index\n",
+    "        def node_operation(operator,operand):\n",
+    "            if   operator == '+':   return  operand[0] + operand[1]\n",
+    "            elif operator == '-':   return  operand[0] - operand[1]\n",
+    "            elif operator == '*':   return  operand[0] * operand[1]\n",
+    "            elif operator == '/':   return  operand[0] / operand[1]\n",
+    "            elif operator == '^':   return  operand[0] ** operand[1]\n",
+    "            elif operator == 'sin': return  np.sin(operand)#TODO sin/cos try error for 2 val operand (np will do it with no issue)\n",
+    "            elif operator == 'cos': return  np.cos(operand) \n",
+    "       \n",
+    "        L_child, R_child = self.get_children(node_ind)\n",
+    "        \n",
+    "        #TODO: deal with NAN child if non trig or dual nan for operator leaf\n",
+    "\n",
+    "        #CHECKS left child, if an operator, evaluate recursively returning a constant. If X, assign it. \n",
+    "        if L_child.function_name in self.operators: \n",
+    "            L_child = self.node_eval(2*node_ind)\n",
+    "        elif L_child.function_name == 'var':\n",
+    "            L_child.value = X\n",
+    "             \n",
+    "        #same for right child\n",
+    "        if R_child.function_name in self.operators: \n",
+    "            R_child = self.node_eval(2*node_ind+1) \n",
+    "        elif R_child.function_name == 'var':\n",
+    "            R_child.value = X\n",
+    "        \n",
+    "        # terminating state: both children are constandts (floats) after being evaluated\n",
+    "        node = self.heap[node_ind]\n",
+    "        return node_operation(node,(L_child, R_child))\n",
+    "\n",
+    "\n",
+    "   \n",
+    "       \n",
+    "\n",
+    "    def Mutation(self):  #TODO\n",
+    "        #small change to constants and addition/substraction to variables\n",
+    "\n",
+    "        return None\n",
+    "\n",
+    "    ##### BLOAT PROBLEM ####\n",
+    "    def pruning(self):   #TODO\n",
+    "        #deletes useless tree\n",
+    "        return None\n",
+    "    \n",
+    "    def constant_consolidation(self): #TODO\n",
+    "        #deletes useless tree\n",
     "        return None\n",
     "    \n",
     "    \n",
     "    \n",
-    "    def insert(self,parent_indx, value):\n",
+    "    def insert(self,parent_indx, node_obj, position = None):\n",
     "        # check for size availibility or resize\n",
     "        # insert child of parent if \n",
-    "        \n",
-    "        #check heap length to add to parent:\n",
-    "        while self.heap.size < self.get_right_child_idx(parent_indx):\n",
-    "            #print('doubled',self.heap.size ,self.get_right_child_idx(parent_indx)  )\n",
-    "            self.heap = np.append(self.heap, np.full(self.heap.size, np.nan)) #doubles array in size with a string of\n",
-    "            \n",
-    "                \n",
-    "        L,R = self.get_children_idx(parent_indx)\n",
     "\n",
-    "        if np.isnan(self.heap[L]): \n",
-    "            self.heap[L] = value\n",
+    "        '''\n",
+    "        try:\n",
+    "            if node_obj.function_name not in self.node_types:\n",
+    "                raise ValueError('\"Invalid input. Please enter a valid node type \\n\\n\\t run> heap.node_types for the list\"')\n",
     "        \n",
-    "        elif np.isnan(self.heap[R]): \n",
-    "            self.heap[R] = value\n",
+    "        except ValueError as err_msg: print(err_msg) \n",
+    "        '''\n",
+    "        \n",
+    "        #check heap length if short, doubles array until acceptable\n",
+    "        while self.heap.size -1 < self.get_right_child_idx(parent_indx):\n",
+    "            #print('doubled',self.heap.size ,self.get_right_child_idx(parent_indx)  )\n",
+    "            self.heap = np.append(self.heap, \n",
+    "                                  np.full(self.heap.size, np.nan).astype(Function_node)) \n",
+    "                   \n",
+    "        \n",
+    "        #TODO raise error for operators not in the predefined list of self.operators: \n",
+    "        \n",
+    "        L_indx,R_indx = self.get_children_idx(parent_indx)\n",
+    "\n",
+    "        #if a position is provided it will insert with replacemnt\n",
+    "        if position:\n",
+    "            if position   == 'L': self.heap[L_indx] = node_obj\n",
+    "            elif position == 'R': self.heap[R_indx] = node_obj\n",
+    "            else: print(\"invalid arg position = 'L' or 'R'\")\n",
     "            \n",
-    "        else: #insert to the left child. \n",
-    "            print('Parent children filled') #recursive and insert down?\n",
+    "        #if no position provided it will insert left to right if a child is empty\n",
+    "        elif np.isnan(self.heap[L_indx]): self.heap[L_indx] = node_obj\n",
+    "        elif np.isnan(self.heap[R_indx]): self.heap[R_indx] = node_obj\n",
+    "            \n",
+    "        else: #insert to the left child. #TODO: implement recursive insert. \n",
+    "            print('Parent children filled') \n",
     "            #self.insert(self,parent_indx = L, value = value )\n",
-    "        \n",
     "        return None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ww = Function_node('mult')\n",
-    "children = [2,3]\n",
-    "ww.children = children\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "float() argument must be a string or a real number, not 'Function_node'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\eduar\\OneDrive\\Documents\\FALL 2023\\MECS4510 EVOLUTIONARY COMPUTATION&DESIGN AUTOMATI\\4510_HW2\\HW2_notebook.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m hh \u001b[39m=\u001b[39m NP_Heap(length \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m hh\u001b[39m.\u001b[39mheap[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m hh\u001b[39m.\u001b[39minsert(parent_indx \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m,value \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m hh\u001b[39m.\u001b[39minsert(parent_indx \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m,value \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39mmult\u001b[39m\u001b[39m'\u001b[39m))\n",
-      "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'Function_node'"
-     ]
-    }
-   ],
-   "source": [
-    "hh = NP_Heap(length = 2)\n",
-    "hh.heap[0] = Function_node('mult')\n",
-    "hh.insert(parent_indx = 0,value = Function_node('mult'))\n",
-    "hh.insert(parent_indx = 1,value = Function_node('mult'))\n",
-    "\n",
-    "hh.print_arr()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nan nan nan] <class '__main__.Function_node'>\n",
-      "function name mult\n",
-      "mult\n"
+      "[['0' '1' '2' '3' '4' '5' '6' '7']\n",
+      " ['H' '+' '*' '7' '2' 'x=2' 'nan' 'nan']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('+', '-', '*', '/', '^', 'sin', 'cos', 'const', 'var', 'H')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hh = NP_Heap(length = 2)\n",
+    "hh.heap[0] = Function_node('H')\n",
+    "hh.heap[1] = Function_node('+')\n",
+    "hh.insert(parent_indx = 1,position= 'L', node_obj = Function_node('*'))\n",
+    "hh.insert(parent_indx = 1,position= 'R', node_obj = Function_node('const', value = 7))\n",
+    "hh.insert(parent_indx = 2,position= 'L', node_obj = Function_node('const', value = 2))\n",
+    "hh.insert(parent_indx = 2,position= 'R', node_obj = Function_node('var', value = 2))\n",
+    "\n",
+    "hh.print_arr()\n",
+    "hh.node_types\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 7 7\n"
      ]
     }
    ],
    "source": [
-    "a2  = np.full(3,np.nan).astype(Function_node)\n",
-    "nde = Function_node('mult')\n",
-    "print(a2, type(nde))\n",
-    "a2[0] = Function_node('mult')\n",
-    "print(a2[0])"
+    "print(int(7),int(7.3),int(7.8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3143092134.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[31], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    def\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Parent:\n",
+    "    CONSTANT_IN_CLASS = 1337\n",
+    "    \n",
+    "    def\n",
+    "    print(CONSTANT_IN_CLASS)\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    pass\n",
+    "\n",
+    "print(Child.CONSTANT_IN_CLASS)  # Outputs: 42\n"
    ]
   }
  ],
