migrated python file with ipynb

--- a/HW2_notebook - Copy.ipynb
+++ b/HW2_notebook - Copy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -276,10 +276,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e605161c50>]"
+       "[<matplotlib.lines.Line2D at 0x20286e33850>]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\eduar\\OneDrive\\Documents\\FALL 2023\\MECS4510 EVOLUTIONARY COMPUTATION&DESIGN AUTOMATI\\4510_HW2\\HW2_notebook.ipynb Cell 6\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#X40sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#X40sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(a, \u001b[39mtype\u001b[39m(a))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook.ipynb#X40sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39misnan(a))\n",
+      "\u001b[1;32mc:\\Users\\eduar\\OneDrive\\Documents\\FALL 2023\\MECS4510 EVOLUTIONARY COMPUTATION&DESIGN AUTOMATI\\4510_HW2\\HW2_notebook - Copy.ipynb Cell 6\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook%20-%20Copy.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a \u001b[39m=\u001b[39m Function_node(\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook%20-%20Copy.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(a, \u001b[39mtype\u001b[39m(a))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/eduar/OneDrive/Documents/FALL%202023/MECS4510%20EVOLUTIONARY%20COMPUTATION%26DESIGN%20AUTOMATI/4510_HW2/HW2_notebook%20-%20Copy.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39misnan(a))\n",
       "\u001b[1;31mTypeError\u001b[0m: ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
      ]
     }
