--- a/HW2_notebook.ipynb
+++ b/HW2_notebook.ipynb
@@ -109,13 +109,20 @@
     "            self.req_num_childs = 1\n",
     "        else:\n",
     "            self.req_num_childs = 0\n",
-    "\n",
+    "    \n",
     "    # METHODS:\n",
     "    def add_child_count(self):\n",
     "        self.num_childs += 1\n",
-    "\n",
+    "        \n",
     "    def can_add_child(self):\n",
     "        return self.num_childs < self.req_num_childs\n",
+    "    \n",
+    "    def copy_node(self):\n",
+    "        #returns a copy of the node\n",
+    "        new_node = Function_node(function_name = self.function_name,\n",
+    "                                 value = self.value)\n",
+    "        new_node.num_childs = self.num_childs\n",
+    "        return new_node\n",
     "\n",
     "    def __str__(self):  # print statement\n",
     "        if self.function_name == 'const':\n",
@@ -191,8 +198,14 @@
     "            return True\n",
     "\n",
     "    def copy(self):\n",
-    "        h = NP_Heap()\n",
-    "        h.heap = np.copy(self.heap)\n",
+    "        #ERROR HERE! WE had to not just initialize a new heap but also the nodes themselves... duh....\n",
+    "        h = NP_Heap(length = self.heap.size)\n",
+    "        \n",
+    "        for i,node in enumerate(self.heap):\n",
+    "            if node == None: \n",
+    "                h.heap[i] = None\n",
+    "            else: \n",
+    "                h.heap[i] = node.copy_node()\n",
     "        return h\n",
     "\n",
     "    # Why not just do this?\n",
@@ -422,15 +435,15 @@
     "            - Optimization by consolidating into one function so we dont have to traverse heap. (in practice heap should be small!)\n",
     "    '''\n",
     "\n",
-    "    def Constant_Mutation(self, change_prcnt=.01):  # TODO\n",
+    "    def Constant_Mutation(self, change_prcnt=.02, min_mutation_range = .05 ):  # TODO newar zero increase mutation size\n",
     "        # small change to constants and addition/substraction to variables\n",
     "        # basic: for node in heap, if name = const +_ X%\n",
-    "        for i, node in enumerate(self.heap):\n",
+    "        for node in self.heap:\n",
     "            if type(node) == Function_node and node.function_name == 'const':\n",
-    "                mutation_size = change_prcnt*node.value\n",
-    "                node.value = node.value + mutation_size * \\\n",
-    "                    np.random.choice([-1, 1])\n",
-    "        return None\n",
+    "                R       = abs(change_prcnt*node.value)\n",
+    "                Range   = max(R,min_mutation_range) #makes sure the change is at least a min for near zero constant\n",
+    "                node.value += random.uniform(-1*Range,Range)\n",
+    "        return self\n",
     "\n",
     "    def Operator_mutation(self, number):\n",
     "        for i, node in enumerate(self.heap):\n",
@@ -549,25 +562,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hill climber:\n",
     "def HC(target_data, step_search_size=128, max_depth=3, mutate_prcnt_change=.01,\n",
-    "       const_prob=.5, C_range=(-10, 10)):\n",
+    "       const_prob=.5, C_range=(-10, 10), given_function=None, Optimized_random = 50):\n",
     "    '''\n",
-    "    This function will search 128 random children and move in the best direction from a random start. \n",
-    "\n",
+    "    This function will search random children and move in the best direction from an optimized random start. \n",
     "\n",
     "    '''\n",
-    "    # initialize return functions\n",
-    "    Best_Function = NP_Heap(length=32)\n",
-    "    Best_Function.Random_Heap(max_depth=max_depth,\n",
-    "                              const_prob=const_prob,\n",
-    "                              C_range=C_range)\n",
-    "    Min_MSE = Best_Function.MSE(target_data)\n",
-    "\n",
-    "    print('Initial \\n', Best_Function)\n",
-    "    print('min MSE', Min_MSE)\n",
-    "\n",
-    "    MSE_log = []\n",
+    "    if not given_function: \n",
+    "        # initialize return functions\n",
+    "        if Optimized_random: #does a quick random search to eliminate the trash #TODO diversity issue this should be deliberately implemented at the random function level\n",
+    "            Best_Function, _ = Random_Search(evaluations = 47,\n",
+    "                                        data=target_data,\n",
+    "                                        max_depth=max_depth,\n",
+    "                                        C_range=C_range)\n",
+    "        else: \n",
+    "            Best_Function = NP_Heap(length=32)\n",
+    "            Best_Function.Random_Heap(max_depth=max_depth,\n",
+    "                                        const_prob=const_prob,\n",
+    "                                        C_range=C_range)\n",
+    "    else: Best_Function = given_function\n",
+    "    \n",
+    "    Min_MSE  = Best_Function.MSE(target_data)\n",
+    "    MSE_log  = []\n",
     "    Improved = True\n",
     "    step_num = 0\n",
     "    while Improved:\n",
@@ -587,11 +603,35 @@
     "        step_num += 1\n",
     "        MSE_log.append([step_num*step_search_size, Min_MSE])\n",
     "\n",
-    "        #print('loop ',step_num, ' DONE' )\n",
+    "        print('loop ',step_num, ' DONE' )\n",
     "        #print('Best child \\n',Best_Function)\n",
-    "        #print('min MSE', Min_MSE)\n",
+    "        print('min MSE', Min_MSE)\n",
     "\n",
-    "    return Best_Function, MSE_log"
+    "    return Best_Function, MSE_log\n",
+    "# Random starts\n",
+    "def RSHC(Starts, target_data, step_search_size=128, max_depth=3, mutate_prcnt_change=.02,\n",
+    "         const_prob=.5, C_range=(-10, 10), Optimized_random = True):\n",
+    "    \n",
+    "    improvement_log = []\n",
+    "    total_evals = 0\n",
+    "    Best_MSE = 1e7\n",
+    "    best_function = None\n",
+    "    for i in range(Starts):\n",
+    "        print('**** START = ',i,' *****')\n",
+    "        function, mse_arr = HC(step_search_size=step_search_size,\n",
+    "                                target_data=target_data,\n",
+    "                                mutate_prcnt_change= mutate_prcnt_change,\n",
+    "                                max_depth=max_depth,\n",
+    "                                const_prob=const_prob,\n",
+    "                                C_range=C_range,\n",
+    "                                Optimized_random = Optimized_random)\n",
+    "        evals, best_MSE_i = mse_arr[-1]\n",
+    "        total_evals += evals\n",
+    "        if best_MSE_i < Best_MSE:\n",
+    "            improvement_log.append([total_evals, best_MSE_i])\n",
+    "            best_function = function\n",
+    "            Best_MSE      = best_MSE_i\n",
+    "    return best_function, improvement_log"
    ]
   },
   {
@@ -600,35 +640,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %% Random starts #TODO wrap in a function\n",
-    "improvement_log = []\n",
-    "total_evals = 0\n",
-    "Best_MSE = 1e7\n",
-    "best_function = None\n",
-    "for i in range(250):\n",
-    "    function, mse_arr = HC(search_size=25,\n",
-    "                           target_data=Bronze_data,\n",
-    "                           mutate_prcnt_change=.025,\n",
-    "                           max_depth=4,\n",
-    "                           const_prob=0.4,\n",
-    "                           C_range=Y_range_Cu)\n",
-    "    evals, best_MSE_i = mse_arr[-1]\n",
-    "    total_evals += evals\n",
-    "    if best_MSE_i < Best_MSE:\n",
-    "        improvement_log.append([total_evals, Best_MSE])\n",
-    "        best_function = function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TODO Test this \n",
-    "print(best_function)\n",
-    "\n",
-    "function.plot_approximation(target_data=Bronze_data)"
+    "#%% RUN RSHC \n",
+    "best_function, performance_log= RSHC(Starts= 10,\n",
+    "                                    step_search_size=25,\n",
+    "                                    mutate_prcnt_change=.08,\n",
+    "                                    target_data=Bronze_data,\n",
+    "                                    max_depth=3,\n",
+    "                                    C_range=Y_range_Cu,\n",
+    "                                    Optimized_random = 100)\n",
+    "print(best_function, '\\n MSE= ',best_function.MSE(Bronze_data))\n",
+    "best_function.plot_approximation(target_data=Bronze_data)"
    ]
   },
   {
